@@ -1,3 +1,7 @@
+2008-07-15 Og Maciel <ogmaciel@gnome.org>
+
+    * dialogs.py: Fixed regression from r.557 that caused records to be reset upon editing
+
 2008-07-10 Og Maciel <ogmaciel@gnome.org>
 
     * common.py:  Make use of gconf values
